# ProjectX

./: .gitignore  README.md  pyproject.toml  test_notebook.ipynb
data_mapping/: get_USAFacts_csv.bash  get_canada_health_region_shapefile.bash  get_usa_county_shapefile.bash  map_to_shapes.py
data_processed/: USA_Population_Density.csv  usa_top30_with_density
notebooks/final_prelim_code/: CAMS_preprocessing.py
notebooks/prediction/: paper_draft.ipynb
notebooks/prelim/: CAMS_data_transformation.ipynb  Covid19CA_analysis.ipynb  Covid19USA_analysis-smoothing.ipynb  Covid19USA_analysis.ipynb  italy.ipynb
notebooks/preprocessing/: covid_cams_merge.ipynb  usa_covid.ipynb
notebooks/usa/: pipeline.ipynb  usa_covid.ipynb
server/: map.py  prediction_results.csv
