[tool.poetry]
name = "projectx-udem"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
scipy = "^1.5.2"
ipykernel = "^5.3.4"
requests = "^2.24.0"
toml = "^0.10.1"
google-cloud-storage = "^1.31.2"
pandas = "^1.1.3"
google-cloud-bigquery-storage = "^2.0.0"
google-cloud-bigquery = {extras = ["bqstorage", "pandas"], version = "^2.1.0"}
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
